implement the message and secret key message data structure

--- a/guard/config.json
+++ b/guard/config.json
@@ -1,7 +1,7 @@
 {
     "cmmand script":"/root/nexfid.sh",
     "secret key file":"/root/key",
-    "nic interface":"br-lan",
+    "nic interface":"enp0s3",
     "button message pipe":"/tmp/btnfifo",
     "led message pipe":"/tmp/ledfifo"
 }
